--- a/client/src/app/challenge/list-completed-challenges/show-completed-challenge-details/show-completed-challenge-details.component.html
+++ b/client/src/app/challenge/list-completed-challenges/show-completed-challenge-details/show-completed-challenge-details.component.html
@@ -37,7 +37,7 @@
   </ul>
   </div>
   <div class="col-2 my-info">
-    <ul *ngFor="let number of [0, 1, 2, 3, 4]">
+    <ul *ngFor="let number of [1, 2, 3, 4, 5]">
       <li><h2>{{number}}</h2></li>
     </ul>
   </div>
@@ -59,6 +59,7 @@
 </div>
 <div class="row">
   <div class="col">
-    <button class="btn btn-info">VIEW CORRECT ANSWERS</button>
+    <button class="btn btn-info" (click)="viewCorrectAnswers(details.id)">VIEW CORRECT ANSWERS</button>
+    <button mat-raised-button color="primary" (click)="close()">Close</button>
   </div>
 </div>
