Change naming, fix little bugs, refactor code

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,13 +5,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div *ngIf="!authService.isAuthenticated()" class="navbar-nav">
-        <span><a [routerLink]="['/dashboard']" routerLinkActive="router-link-active">Dashboard</a></span>
+        <span><a [routerLink]="['/']" routerLinkActive="router-link-active">Home</a></span>
         <span><a [routerLink]="['/forum']" routerLinkActive="router-link-active">Forum</a></span>
         <span><a [routerLink]="['/register']" routerLinkActive="router-link-active">Register</a></span>
         <span><a [routerLink]="['/login']" routerLinkActive="router-link-active">Login</a></span>
       </div>
       <div *ngIf="authService.isAuthenticated()" class="navbar-nav">
-        <span><a [routerLink]="['/dashboard']" routerLinkActive="router-link-active">Dashboard</a></span>
+        <span><a [routerLink]="['/']" routerLinkActive="router-link-active">Home</a></span>
         <span><a [routerLink]="['/forum']" routerLinkActive="router-link-active">Forum</a></span>
         <span><a [routerLink]="['/my-profile']" routerLinkActive="router-link-active">Profile</a></span>
         <span><a [routerLink]="['/challenge']" routerLinkActive="router-link-active">Challenge</a></span>
