--- a/client/src/app/challenge/list-completed-challenges/show-completed-challenge-details/show-correct-answers-challenge/show-correct-answers-challenge-details.component.html
+++ b/client/src/app/challenge/list-completed-challenges/show-completed-challenge-details/show-correct-answers-challenge/show-correct-answers-challenge-details.component.html
@@ -1,8 +1,9 @@
 <h1>Correct answers</h1>
 <div *ngFor="let question of answers.questions; let i = index">
-  <h5>{{i + 1}}.&nbsp;{{question.question}}
+  <h5>
     <span *ngIf="answers.areCorrect[i] == '1'"><i class="far fa-check-circle"></i></span>
     <span *ngIf="answers.areCorrect[i] == '0'"><i class="far fa-times-circle"></i></span>
+    {{i + 1}}.&nbsp;{{question.question}}
   </h5>
   <div *ngIf="answers.areCorrect[i] == '1'">
     <div *ngFor="let answer of answers.questions[i].answers; let j = index">
