--- a/client/src/app/challenge/list-pending-challenges/submit-pending-challenge/submit-pending-challenge.component.html
+++ b/client/src/app/challenge/list-pending-challenges/submit-pending-challenge/submit-pending-challenge.component.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title>Answer the following questions</h1>
+<h1>Answer the following questions</h1>
 <form [formGroup]="submitPendingChallengeForm" (ngSubmit)="onSubmit(submitPendingChallengeForm)" autocomplete="off">
   <div>
-    <mat-label>1. {{questions[0].question}}</mat-label>
+    <h5>1. {{questions[0].question}}</h5>
     <mat-radio-group formControlName="answer1">
       <mat-radio-button *ngFor="let answer1 of questions[0].answers; let j = index"
                         [value]="questions[0].questionId + ':' + options[j]">
@@ -12,7 +12,7 @@
   </div>
 
   <div>
-    <mat-label>2. {{questions[1].question}}</mat-label>
+    <h5>2. {{questions[1].question}}</h5>
     <mat-radio-group formControlName="answer2">
       <mat-radio-button *ngFor="let answer2 of questions[1].answers; let j = index"
                         [value]="questions[1].questionId + ':' + options[j]">
@@ -23,7 +23,7 @@
   </div>
 
   <div>
-    <mat-label>3. {{questions[2].question}}</mat-label>
+    <h5>3. {{questions[2].question}}</h5>
     <mat-radio-group formControlName="answer3">
       <mat-radio-button *ngFor="let answer3 of questions[2].answers; let j = index"
                         [value]="questions[2].questionId + ':' + options[j]">
@@ -34,7 +34,7 @@
   </div>
 
   <div>
-    <mat-label>4. {{questions[3].question}}</mat-label>
+    <h5>4. {{questions[3].question}}</h5>
     <mat-radio-group formControlName="answer4">
       <mat-radio-button *ngFor="let answer4 of questions[3].answers; let j = index"
                         [value]="questions[3].questionId + ':' + options[j]">
@@ -45,7 +45,7 @@
   </div>
 
   <div>
-    <mat-label>5. {{questions[4].question}}</mat-label>
+    <h5>5. {{questions[4].question}}</h5>
     <mat-radio-group formControlName="answer5">
       <mat-radio-button *ngFor="let answer5 of questions[4].answers; let j = index"
                         [value]="questions[4].questionId + ':' + options[j]">
