--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import '~ngx-toastr/toastr.css';
 @import url('https://fonts.googleapis.com/css?family=Days+One');
+@import url('https://fonts.googleapis.com/css?family=Rokkitt');
 
 html {
   position: relative;
@@ -11,5 +12,5 @@ body {
   background-image: url('assets/img/background.jpg');
   height: 40em; background-size: cover; width: auto;
   background-position: 50% 50%;
-  font-family: 'Days One', sans-serif;
+  font-family: 'Rokkitt', serif;
 }
