Add mat dialogs of user challenge statistics

--- a/client/src/app/challenge/list-completed-challenges/list-completed-challenges.component.html
+++ b/client/src/app/challenge/list-completed-challenges/list-completed-challenges.component.html
@@ -5,7 +5,7 @@
     <thead class="table-primary">
     <tr>
       <th>#</th>
-      <th>Opponent name</th>
+      <th>Rival name</th>
       <th>Date</th>
       <th>Time</th>
       <th>Result</th>
@@ -15,7 +15,7 @@
     <tbody *ngFor="let completedChallenge of completedChallenges; let i = index">
     <tr>
       <td>{{i + 1}}</td>
-      <td>{{completedChallenge.opponentName}}</td>
+      <td><a matTooltip="Info about the rival" (click)="showRivalProfile(completedChallenge.opponentName)"><u><i>{{completedChallenge.opponentName}}</i></u></a></td>
       <td>{{completedChallenge.date}}</td>
       <td>{{completedChallenge.time}}</td>
       <td>{{completedChallenge.result}}</td>
