--- a/client/src/app/challenge/list-pending-challenges/list-pending-challenges.component.css
+++ b/client/src/app/challenge/list-pending-challenges/list-pending-challenges.component.css
@@ -10,10 +10,10 @@ tbody {
   background-color: #FFFFFF;
 }
 
-#action {
-  text-align: center;
-}
-
 a {
   cursor: pointer;
+}
+
+tr {
+  text-align: center;
 }
