--- a/client/src/app/challenge/list-pending-challenges/list-pending-challenges.component.html
+++ b/client/src/app/challenge/list-pending-challenges/list-pending-challenges.component.html
@@ -5,10 +5,10 @@
     <thead class="table-primary">
     <tr>
       <th>#</th>
-      <th>Rival name</th>
-      <th>Date</th>
-      <th>Time</th>
-      <th id="action">Action</th>
+      <th><i class="far fa-user"></i></th>
+      <th><i class="far fa-calendar-alt"></i></th>
+      <th><i class="far fa-clock"></i></th>
+      <th><i class="fa fa-wrench"></i></th>
     </tr>
     </thead>
     <tbody *ngFor="let pendingChallenge of pendingChallenges; let i = index">
