--- a/client/src/app/challenge/list-submited-challenges/list-submited-challenges.component.html
+++ b/client/src/app/challenge/list-submited-challenges/list-submited-challenges.component.html
@@ -5,9 +5,9 @@
     <thead class="table-primary">
     <tr>
       <th>#</th>
-      <th>Rival name</th>
-      <th>Date</th>
-      <th>Time</th>
+      <th><i class="far fa-user"></i></th>
+      <th><i class="far fa-calendar-alt"></i></th>
+      <th><i class="far fa-clock"></i></th>
     </tr>
     </thead>
     <tbody *ngFor="let submitedChallenge of submitedChallenges; let i = index">
