--- a/client/src/app/challenge/show-rival-profile/show-rival-profile.component.html
+++ b/client/src/app/challenge/show-rival-profile/show-rival-profile.component.html
@@ -6,10 +6,10 @@
     <h3 id="wins">WINS: {{profile.numberOfWins}}</h3>
     <h3 id="loses">LOSES: {{profile.numberOfLoses}}</h3>
     <h3 id="draws">DRAWS: {{profile.numberOfDraws}}</h3>
-  </div>
-  <div class="col btns">
-    <button mat-raised-button (click)="onNoClick()"
-            [routerLink]="['/profile', profile.username]" routerLinkActive="router-link-active">Show more informations</button>
-    <button mat-raised-button (click)="onNoClick()">Back</button>
+    <div class="btns">
+      <button mat-raised-button (click)="onNoClick()"
+              [routerLink]="['/profile', profile.username]" routerLinkActive="router-link-active">Show more informations</button>
+      <button mat-raised-button (click)="onNoClick()">Back</button>
+    </div>
   </div>
 </div>
