--- a/client/src/app/base/login/login.component.html
+++ b/client/src/app/base/login/login.component.html
@@ -27,7 +27,7 @@
 
     </form>
     <div class="hrefs">
-      <a [routerLink]="['/register']" routerLinkActive="router-link-active">Don't have account yet?</a><br>
+      <a [routerLink]="['/register']" routerLinkActive="router-link-active">Don't have account yet?</a>
       <a [routerLink]="['/forgot-credentials']" routerLinkActive="router-link-active">Forgot your credentials?</a>
     </div>
   </mat-card-content>
