--- a/client/src/app/forum/show-post/show-post.component.css
+++ b/client/src/app/forum/show-post/show-post.component.css
@@ -1,25 +1,15 @@
-#header {
-  margin-top: 10px;
-}
-
 .header-content {
   border-left: 20px solid #007bff;
 }
 
 .row {
-  margin-top: 5px;
+  margin-top: 0.1%;
   background-color: #E8E8E8;
   opacity: 0.80;
 }
 
-.title {
-  margin-top: 10px;
-  height: 70px;
-}
-
 a {
-  font-style: italic;
-  text-decoration: underline;
+  cursor: pointer;
 }
 
 .comment {
@@ -32,6 +22,6 @@ a {
 }
 
 .alert-warning {
-  margin-top: 10px;
+  margin-top: 1%;
   opacity: 0.80;
 }
