--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,5 +1,5 @@
 header {
-  font-size: 25px;
+  font-size: 150%;
   font-family: 'Days One', sans-serif;
 }
 
@@ -17,7 +17,7 @@ a {
 }
 
 #logoutHref {
-  color: white;
+  color: #FFFFFF;
   cursor: pointer;
 }
 
