--- a/client/src/app/forum/list-post/list-post.component.css
+++ b/client/src/app/forum/list-post/list-post.component.css
@@ -1,13 +1,11 @@
 .vote {
   opacity: 0.85;
-  height: 120px;
   margin-top: 1%;
   background-color: #E8E8E8;
 }
 
 .post {
   width: 100%;
-  height: 120px;
   display: block;
   opacity: 0.85;
   margin-top: 1%;
@@ -15,7 +13,7 @@
 }
 
 ul {
-  margin-top: 10px;
+  margin-top: 1%;
 }
 
 td {
@@ -27,11 +25,12 @@ td {
 }
 
 .row .voteElements {
-  margin: 10px auto;
+  margin: 3% auto;
 }
 
 button {
-  font-size: 30px;
+  font-size: 150%;
+  font-weight: bold;
 }
 
 .plusBtn {
@@ -44,6 +43,6 @@ button {
   background-color: #FFD2D2;
 }
 
-.nav {
-  margin-bottom: 2%;
+a {
+  cursor: pointer;
 }
