--- a/client/src/app/challenge/list-submited-challenges/list-submited-challenges.component.html
+++ b/client/src/app/challenge/list-submited-challenges/list-submited-challenges.component.html
@@ -5,9 +5,9 @@
     <thead class="table-primary">
     <tr>
       <th>#</th>
-      <th><i class="far fa-user"></i></th>
-      <th><i class="far fa-calendar-alt"></i></th>
-      <th><i class="far fa-clock"></i></th>
+      <th><i class="far fa-user" matTooltip="Rival"></i></th>
+      <th><i class="far fa-calendar-alt" matTooltip="Date"></i></th>
+      <th><i class="far fa-clock" matTooltip="Time"></i></th>
     </tr>
     </thead>
     <tbody *ngFor="let submitedChallenge of submitedChallenges; let i = index">
