--- a/client/src/app/forum/list-post/list-post.component.html
+++ b/client/src/app/forum/list-post/list-post.component.html
@@ -36,6 +36,6 @@
 
 <ul class="nav nav-pills">
   <li class="nav-item" *ngFor="let p of pages; let i=index">
-    <a class="nav-link" href="#" (click)="setPage(i, $event)" [ngClass]="{'active':i==page}">{{i}}</a>
+    <a class="nav-link" href="#" (click)="setPage(i, $event)" [ngClass]="{'active':i==page}">{{i + 1}}</a>
   </li>
 </ul>
