Add mechanism of adding experience after user actions

--- a/client/src/app/challenge/list-completed-challenges/show-completed-challenge-details/show-completed-challenge-details.component.html
+++ b/client/src/app/challenge/list-completed-challenges/show-completed-challenge-details/show-completed-challenge-details.component.html
@@ -54,7 +54,9 @@
 </div>
 <div class="row">
   <div id="gainedXP" class="col my-info">
-    <h2>Gained experience:&nbsp;<span id="gainedXP-text">+{{details.gainedXP}}</span></h2>
+    <h2>Correct answers:&nbsp;<span class="gainedXP-text">+{{details.gainedExperienceForCorrectAnswers}}&nbsp;XP</span></h2>
+    <h2>Result:&nbsp;<span class="gainedXP-text">+{{details.bonusExperienceForResult}}&nbsp;XP</span></h2>
+    <h2>Total:&nbsp;<span class="gainedXP-text">+{{details.totalGainedExperience}}&nbsp;XP</span></h2>
   </div>
 </div>
 <div class="row">
